<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Using LinearLayout because it is used for easy layout -->

       <LinearLayout
           android:id="@+id/listLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
           android:orientation="vertical">

           <LinearLayout
               android:id="@+id/name"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <TextView
                   android:id="@+id/shoeN"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/shoeName" />

               <TextView
                   android:id="@+id/shoe_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/shoe_name" />
           </LinearLayout>

           <LinearLayout
               android:id="@+id/size"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <TextView
                   android:id="@+id/shoeS"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/shoeSize" />

               <TextView
                   android:id="@+id/shoe_size"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/shoe_size" />
           </LinearLayout>

           <LinearLayout
               android:id="@+id/description"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal">

               <TextView
                   android:id="@+id/shoeDescription"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/shoeDescription" />

               <TextView
                   android:id="@+id/shoe_decription"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/shoe_description" />
           </LinearLayout>
       </LinearLayout>

   </layout>