<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detailName"
            style="@style/textStyle"
            android:layout_marginTop="130dp"
            android:text="@string/email_text"
            app:layout_constraintBaseline_toBaselineOf="@id/shoeEnter"
            app:layout_constraintEnd_toStartOf="@+id/shoeEnter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Email:" />

        <EditText
            android:id="@+id/shoeEnter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/please_enter_your_e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@id/detailName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detailName"
            app:layout_constraintTop_toBottomOf="@id/detailName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/passwd"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@id/shoeEnter"
            app:layout_constraintBottom_toTopOf="@id/detailName"
            app:layout_constraintStart_toStartOf="@id/detailName"
            app:layout_constraintTop_toBottomOf="@id/shoeEnter"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/companyEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enter_your_passowrd"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@id/company"
            app:layout_constraintBottom_toTopOf="@id/company"
            app:layout_constraintEnd_toEndOf="@id/shoeEnter"
            app:layout_constraintStart_toStartOf="@id/shoeEnter"
            app:layout_constraintTop_toBottomOf="@id/shoeEnter" />

        <Button
            android:id="@+id/LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/log_in"
            app:layout_constraintStart_toEndOf="@id/company"
            app:layout_constraintTop_toBottomOf="@id/companyEnter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>