<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--Using Constraint layout because i prefer the capability of visual editing -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="252dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/welcome_to_my_shoe_store"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@id/instruction_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/instruction_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/run_by_xiao"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="@id/title_instruction"
            app:layout_constraintTop_toBottomOf="@id/title_instruction" />

        <Button
            android:id="@+id/next"
            android:layout_width="76dp"
            android:layout_height="53dp"
            android:layout_marginTop="132dp"
            android:layout_marginBottom="334dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/next"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/instruction_word"
            app:layout_constraintTop_toBottomOf="@id/instruction_word" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>